[package]
name = "transform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = "0.3.1"
extract = { version = "0.1.0", path = "../extract" }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
thiserror = "1.0.40"

[dev-dependencies]
rstest = "0.17.0"
